# MaskSVD

./: CMakeLists.txt  Global_optimizer_fast.py  ICP_gt.py  LICENSE  Mask_var.py  README.md  Registration_demo.py  Registration_test.py  Registration_test_ani.py  Registration_test_jurai.py  Registration_test_jurai_fast.py  Registration_test_jurai_ptlk.py  S3DIS.py  T-pipe_demo.py  T-pipe_matching.py  T-pipe_test.py  T-pipe_test_jurai.py  T-pipe_test_jurai_fast.py  T-pipe_test_jurai_ptlk.py  TNUTEJN016.pcd  TNUTEJN016_10000.pcd  TNUTEJN016_10000.ply  TNUTEJN016_10000_down.ply  TNUTEJN016_10000_half.pcd  TNUTEJN016_10000_half2.pcd  TNUTEJN016_10000_half3.pcd  TNUTEJN016_1024.ply  TNUTEJN016_5000.pcd  TNUTEJN016_half2.pcd  TNUTEJN016_half_unnoise.pcd  Tokuichi_divide.py  Tpipe_test_jurai_ptlk_time.ipynb  Tpipe_test_jurai_time.ipynb  Tpipe_test_time.ipynb  WMU2LR2020.pcd  WMU2LR2020_10000.pcd  WMU2LR2020_10000.ply  WMU2LR2020_100000.pcd  WMU2LR2020_10000_down.ply  WMU2LR2020_10000_half.pcd  (+85 more)
csv/: con_pose_errors.csv  fgr_pose_errors.csv  pro_pose_errors.csv  pro_pose_errors_0.003.csv
csv_L/: con_pose_errors.csv  fgr_pose_errors.csv  pose_errors.csv  pro_pose_errors.csv
csv_T/: con_pose_errors.csv  fgr_pose_errors.csv  pro_pose_errors.csv
posture_estimation/: Global_optimizer.py  Global_optimizer_fast.py  Registration_SVD.py  Registration_demo.py  Registration_test_jurai_fast.py  Registration_test_jurai_ptlk.py  Registration_val.py  T-pipe_demo.py  T-pipe_demo_key.py  T-pipe_demo_nonmask.py  T-pipe_test.py  T-pipe_test_jurai_fast.py
preprocess/: stl2ply.py
(+14 files in other folders)
